MailZu 0.9.3-github-gnafixes (09.10.2018):
----------
Mobile responsive, and usability changes:
- Switched from XHTML to HTML5 in header
- added marker class quarcell which can be referred in mobile view CSS
- added marker id-s for all the anonymous tables, to ease selecting in mobile view CSS
- added @media query based mobile view rules to css.css
- small fixes for language cookie
- small fixes for cookie based login

MailZu 0.9.2-github-gnafixes (09.07.2018):
----------
- Applied changes from @crazy4chrissi fork

MailZu 0.9.1-github-gnafixes (06.14.2017):
----------
- Cookie login persistence fixes
- First changes to allow mobile responsive usage

MailZu 0.9-github-gnafixes (06.14.2017):
----------
- First fork from zedzedtop, small fixes to it

MailZu 0.8RC3 (06.14.2007):
----------
- Fixed an inconsistency in the FAQ
- Fixed bug when using proxyAddresses attribute in AD authentication
- Added installation requirement of using the TIMESTAMP type for the 'time_iso' field
when using MySQL
- Added more Czech translation; contribution from Petr Stehlik

MailZu 0.8RC2:
----------
- Fixes Email Administrator Header reported by Benny Pedersen.
- Updates description of adminEmail in INSTALL and config.php.sample.
- Isolate OR statements in convertEmailaddresses2SQL
- Fixed $_SESSION['sessionMail'][0] submitted by Serge Algarotti
- Added option toggle for 'Site Quarantine Summary'
- Added $conf['app']['debug'] to config.php.sample 
  - Debug dumps all SQL Queries to the log file


MailZu 0.8RC1 (03.23.2007):
----------
- Support for binary mail_text column of quarantine table. Since amavisd-new 2.4.4
  the mail_text column was changed so that the data would not be affected by
  the encoding of the database.

  If you are using the binary type on this column, set

    $conf['db']['binquar'] = True;

  in your config.php.

- Support for recipient delimiters. New option in config.php.
  
    $conf['recipient_delimiter'] = ''; // set to '+' or any delimiter 
